# beautipy

./: CHANGELOG.md  LICENSE  README.md  beautipy.py  pyproject.toml
examples/: options.py
examples/json/: example.py  input.json  output.json
examples/txt/: example.py  input.txt  output.txt
src/beautipy/: __init__.py  __main__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
