[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beautipy"
version = "0.1.1"
description = "A lightweight pretty-printer for data structures."
readme = "README.md"
authors = [
    {name = "M. Reza Norouzi", email = "r.norouzi@proton.me"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []
keywords = [
    "formatting",
    "beautify",
    "prettify",
    "pretty-print",
    "indentation",
    "data-structures",
    "nested-structures",
    "structured-text",
    "string-formatting",
    "json",
    "debug",
    "readability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/norouzir/beautipy"
Repository = "https://github.com/norouzir/beautipy"
Changelog = "https://github.com/norouzir/beautipy/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/norouzir/beautipy/issues"

[project.optional-dependencies]
dev = ["build", "twine", "pytest"]

[project.scripts]
beautipy = "beautipy.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/beautipy"]

[tool.hatch.build.targets.sdist]
include = [
    "src/beautipy",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "examples",
]
